--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
 
 <body>
     <!-- Header -->
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
+    </header>
 
     <!-- Main content -->
     <main>Main content</main>
-    
+
     <!-- Footer -->
     <footer>Footer</footer>
 </body>
