--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
             <h1 id="logo">Love Running</h1>
         </a>
     </header>
-
+    <nav>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Gallery</a></li>
+            <li><a href="">Sign Up</a></li>
+        </ul>
+    </nav>
     <!-- Main content -->
     <main>Main content</main>
 
