--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
@@ -23,18 +25,20 @@
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
+        <nav>
+            <ul id="menu">
+                <li><a href="" class="active">Home</a></li>
+                <li><a href="">Gallery</a></li>
+                <li><a href="">Sign Up</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul id="menu">
-            <li><a href="" class="active">Home</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">Sign Up</a></li>
-        </ul>
-    </nav>
+
     <!-- Main content -->
     <main>Main content</main>
 
     <!-- Footer -->
     <footer>Footer</footer>
 </body>
+
 </html>
