--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+    
 </head>
 
 <body>
@@ -40,7 +41,14 @@
     <main>Main content</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="http://www.facebook.com/" target="_blank" rel="noopener" ariel-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        </ul>
+    </footer>
+
+    <!-- Font Awesome Kit -->
+    <script src="https://kit.fontawesome.com/3ca53d8ebe.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
