--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Footer -->
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href="http://www.facebook.com/" target="_blank" rel="noopener" ariel-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="http://www.twitter.com/" target="_blank" rel="noopener" ariel-label="Visit our Twitter page (opens in new tab)"><i class="fa-brands fa-square-twitter"></i></a></li>
             <li><a href="http://www.youtube.com/" target="_blank" rel="noopener" ariel-label="Visit our Youtube page (opens in new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
