--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </section>
 
-        <!-- Meetup times section -->
+        <!-- Meetup Times section -->
         <section id="meetups">
             <h2 class="hidden-heading">Meet-up Times</h2>
             <div id="times">
@@ -112,7 +112,7 @@
                     <p>Saturday</p>
                     <p>10K</p>
                     <p>The Phoenix Park</p>
-                    <p>9:30</p>
+                    <p>09:30</p>
                 </div>
                 <div>
                     <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
